--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -27,6 +27,20 @@
       <version>4.0.1</version>
     </dependency>
     
+    <!--Datastore-->
+    <dependency>
+      <groupId>com.google.cloud</groupId>
+      <artifactId>google-cloud-datastore</artifactId>
+      <version>1.104.0</version>
+    </dependency>
+
+    <!--Jsoup-->
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.13.1</version>
+    </dependency>
+
     <!-- Gson -->
     <dependency>
       <groupId>com.google.code.gson</groupId>
